--- a/Stock_NeurIPS2018_SB3.ipynb
+++ b/Stock_NeurIPS2018_SB3.ipynb
@@ -143,15 +143,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import datetime"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 4,
       "metadata": {
         "colab": {
@@ -160,7 +151,20 @@
         "id": "lPqeTTwoh1hn",
         "outputId": "23c28589-9d6f-4b8b-bf9e-9822e4ccea90"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'config'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[4], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig_tickers\u001b[39;00m \u001b[39mimport\u001b[39;00m DOW_30_TICKER\n\u001b[1;32m     22\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39menv_stocktrading\u001b[39;00m \u001b[39mimport\u001b[39;00m StockTradingEnv\n\u001b[0;32m---> 23\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m DRLAgent\n\u001b[1;32m     24\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mlogger\u001b[39;00m \u001b[39mimport\u001b[39;00m configure\n\u001b[1;32m     25\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmodule\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mconfig\u001b[39;00m \u001b[39mimport\u001b[39;00m (\n\u001b[1;32m     26\u001b[0m     DATA_SAVE_DIR,\n\u001b[1;32m     27\u001b[0m     TRAINED_MODEL_DIR,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     38\u001b[0m     TODAY\n\u001b[1;32m     39\u001b[0m )\n",
+            "File \u001b[0;32m~/Bureau/VSCode/Stock_drl/Stock_drl/module/models.py:18\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstable_baselines3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcommon\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mnoise\u001b[39;00m \u001b[39mimport\u001b[39;00m OrnsteinUhlenbeckActionNoise\n\u001b[1;32m     16\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mstable_baselines3\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mcommon\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mvec_env\u001b[39;00m \u001b[39mimport\u001b[39;00m DummyVecEnv\n\u001b[0;32m---> 18\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mconfig\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39menv_stocktrading\u001b[39;00m \u001b[39mimport\u001b[39;00m StockTradingEnv\n\u001b[1;32m     20\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpreprocessor\u001b[39;00m \u001b[39mimport\u001b[39;00m data_split\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'config'"
+          ]
+        }
+      ],
       "source": [
         "import sys\n",
         "sys.path.append(\"../STOCK_DRL\")\n",
@@ -200,7 +204,13 @@
         "    TRADE_END_DATE,\n",
         "    YESTERDAY,\n",
         "    TODAY\n",
-        ")\n"
+        ")\n",
+        "\n",
+        "from stable_baselines3 import A2C\n",
+        "from stable_baselines3 import DDPG\n",
+        "from stable_baselines3 import PPO\n",
+        "from stable_baselines3 import SAC\n",
+        "from stable_baselines3 import TD3"
       ]
     },
     {
@@ -4666,9 +4676,10 @@
       ],
       "source": [
         "trained_moedl = trained_a2c\n",
-        "df_account_value_a2c, df_actions_a2c = DRLAgent.DRL_prediction(\n",
-        "    model=trained_moedl, \n",
-        "    environment = e_trade_gym)"
+        "df_account_value_a2c, df_actions_a2c = DRLAgent.DRL_prediction( \n",
+        "    environment = e_trade_gym,\n",
+        "    model_name='a2c',\n",
+        "    cwd='trained_models/a2c.zip')"
       ]
     },
     {
@@ -4693,8 +4704,9 @@
       "source": [
         "trained_moedl = trained_ddpg\n",
         "df_account_value_ddpg, df_actions_ddpg = DRLAgent.DRL_prediction(\n",
-        "    model=trained_moedl, \n",
-        "    environment = e_trade_gym)"
+        "    environment = e_trade_gym,\n",
+        "    model_name='ddpg',\n",
+        "    cwd='trained_models/ddpg.zip')"
       ]
     },
     {
@@ -4719,8 +4731,9 @@
       "source": [
         "trained_moedl = trained_ppo\n",
         "df_account_value_ppo, df_actions_ppo = DRLAgent.DRL_prediction(\n",
-        "    model=trained_moedl,\n",
-        "    environment = e_trade_gym)"
+        "    environment = e_trade_gym,\n",
+        "    model_name='ppo',\n",
+        "    cwd='trained_models/ppo.zip')"
       ]
     },
     {
@@ -4745,8 +4758,9 @@
       "source": [
         "trained_moedl = trained_td3\n",
         "df_account_value_td3, df_actions_td3 = DRLAgent.DRL_prediction(\n",
-        "    model=trained_moedl, \n",
-        "    environment = e_trade_gym)"
+        "    environment = e_trade_gym,\n",
+        "    model_name='td3',\n",
+        "    cwd='trained_models/td3.zip')"
       ]
     },
     {
@@ -4771,8 +4785,9 @@
       "source": [
         "trained_moedl = trained_sac\n",
         "df_account_value_sac, df_actions_sac = DRLAgent.DRL_prediction(\n",
-        "    model=trained_moedl, \n",
-        "    environment = e_trade_gym)"
+        "    environment = e_trade_gym,\n",
+        "    model_name='sac',\n",
+        "    cwd='trained_models/sac.zip')"
       ]
     },
     {
@@ -5150,6 +5165,163 @@
       ],
       "source": [
         "len(DOW_30_TICKER)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'<' not supported between instances of 'list' and 'int'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m np\u001b[39m.\u001b[39mwhere(action \u001b[39m<\u001b[39;49m \u001b[39m-\u001b[39;49mmin_action)[\u001b[39m0\u001b[39m]\n",
+            "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'list' and 'int'"
+          ]
+        }
+      ],
+      "source": [
+        "np.where(action < -min_action)[0]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[-41,\n",
+              " -1,\n",
+              " 80,\n",
+              " -89,\n",
+              " 38,\n",
+              " 2,\n",
+              " -76,\n",
+              " -21,\n",
+              " -60,\n",
+              " -79,\n",
+              " 15,\n",
+              " -71,\n",
+              " 53,\n",
+              " -25,\n",
+              " -45,\n",
+              " 73,\n",
+              " 20,\n",
+              " 61,\n",
+              " -37,\n",
+              " 68,\n",
+              " 77,\n",
+              " -65,\n",
+              " 61,\n",
+              " -11,\n",
+              " 79,\n",
+              " -2,\n",
+              " -34,\n",
+              " -90,\n",
+              " -97]"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "import random\n",
+        "action = []\n",
+        "for i in range(29):    \n",
+        "    action.append(random.randint(-100, 100))\n",
+        "min_action = 10\n",
+        "action"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "3\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "14\n",
+            "18\n",
+            "21\n",
+            "23\n",
+            "26\n",
+            "27\n",
+            "28\n"
+          ]
+        }
+      ],
+      "source": [
+        "l = []\n",
+        "for j in range(len(action)):\n",
+        "    if action[j] < -min_action:\n",
+        "        l.append(j)\n",
+        "\n",
+        "for index in l:\n",
+        "    print(index)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from module.config import (\n",
+        "    ALPACA_API_BASE_URL,\n",
+        "    ALPACA_API_KEY,\n",
+        "    ALPACA_API_SECRET,\n",
+        "    INDICATORS,\n",
+        "    TODAY\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 45,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "HTTPError",
+          "evalue": "403 Client Error: Forbidden for url: https://paper-api.alpaca.markets/v2/positions/AXP",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[45], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39malpaca_trade_api\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mtradeapi\u001b[39;00m\n\u001b[1;32m      3\u001b[0m alpaca \u001b[39m=\u001b[39m tradeapi\u001b[39m.\u001b[39mREST(ALPACA_API_KEY,ALPACA_API_SECRET,ALPACA_API_BASE_URL, \u001b[39m'\u001b[39m\u001b[39mv2\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m alpaca\u001b[39m.\u001b[39;49mget_position(\u001b[39m'\u001b[39;49m\u001b[39mAXP\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mqty\n",
+            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/alpaca_trade_api/rest.py:504\u001b[0m, in \u001b[0;36mREST.get_position\u001b[0;34m(self, symbol)\u001b[0m\n\u001b[1;32m    502\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_position\u001b[39m(\u001b[39mself\u001b[39m, symbol: \u001b[39mstr\u001b[39m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Position:\n\u001b[1;32m    503\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Get an open position\"\"\"\u001b[39;00m\n\u001b[0;32m--> 504\u001b[0m     resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget(\u001b[39m'\u001b[39;49m\u001b[39m/positions/\u001b[39;49m\u001b[39m{}\u001b[39;49;00m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mformat(symbol))\n\u001b[1;32m    505\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mresponse_wrapper(resp, Position)\n",
+            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/alpaca_trade_api/rest.py:250\u001b[0m, in \u001b[0;36mREST.get\u001b[0;34m(self, path, data)\u001b[0m\n\u001b[1;32m    249\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, path, data\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 250\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_request(\u001b[39m'\u001b[39;49m\u001b[39mGET\u001b[39;49m\u001b[39m'\u001b[39;49m, path, data)\n",
+            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/alpaca_trade_api/rest.py:213\u001b[0m, in \u001b[0;36mREST._request\u001b[0;34m(self, method, path, data, base_url, api_version)\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[39mwhile\u001b[39;00m retry \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m    212\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 213\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_one_request(method, url, opts, retry)\n\u001b[1;32m    214\u001b[0m     \u001b[39mexcept\u001b[39;00m RetryException:\n\u001b[1;32m    215\u001b[0m         retry_wait \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_retry_wait\n",
+            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/alpaca_trade_api/rest.py:234\u001b[0m, in \u001b[0;36mREST._one_request\u001b[0;34m(self, method, url, opts, retry)\u001b[0m\n\u001b[1;32m    232\u001b[0m resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_session\u001b[39m.\u001b[39mrequest(method, url, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mopts)\n\u001b[1;32m    233\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 234\u001b[0m     resp\u001b[39m.\u001b[39;49mraise_for_status()\n\u001b[1;32m    235\u001b[0m \u001b[39mexcept\u001b[39;00m HTTPError \u001b[39mas\u001b[39;00m http_error:\n\u001b[1;32m    236\u001b[0m     \u001b[39m# retry if we hit Rate Limit\u001b[39;00m\n\u001b[1;32m    237\u001b[0m     \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus_code \u001b[39min\u001b[39;00m retry_codes \u001b[39mand\u001b[39;00m retry \u001b[39m>\u001b[39m \u001b[39m0\u001b[39m:\n",
+            "File \u001b[0;32m~/.local/lib/python3.8/site-packages/requests/models.py:1021\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1016\u001b[0m     http_error_msg \u001b[39m=\u001b[39m (\n\u001b[1;32m   1017\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstatus_code\u001b[39m}\u001b[39;00m\u001b[39m Server Error: \u001b[39m\u001b[39m{\u001b[39;00mreason\u001b[39m}\u001b[39;00m\u001b[39m for url: \u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39murl\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1018\u001b[0m     )\n\u001b[1;32m   1020\u001b[0m \u001b[39mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1021\u001b[0m     \u001b[39mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m)\n",
+            "\u001b[0;31mHTTPError\u001b[0m: 403 Client Error: Forbidden for url: https://paper-api.alpaca.markets/v2/positions/AXP"
+          ]
+        }
+      ],
+      "source": [
+        "import alpaca_trade_api as tradeapi\n",
+        "\n",
+        "alpaca = tradeapi.REST(ALPACA_API_KEY,ALPACA_API_SECRET,ALPACA_API_BASE_URL, 'v2')\n",
+        "\n",
+        "alpaca.get_position('AXP').qty"
       ]
     },
     {
