--- a/Stock_NeurIPS2018_SB3.ipynb
+++ b/Stock_NeurIPS2018_SB3.ipynb
@@ -5593,6 +5593,129 @@
       "source": [
         "test.run()"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import alpaca_trade_api as tradeapi\n",
+        "from module.config_tickers import DOW_30_TICKER\n",
+        "\n",
+        "from module.config import (\n",
+        "    ALPACA_API_BASE_URL,\n",
+        "    ALPACA_API_KEY,\n",
+        "    ALPACA_API_SECRET,\n",
+        "    INDICATORS,\n",
+        "    TODAY\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[0,\n",
+              " 286.0,\n",
+              " 545.0,\n",
+              " 141.0,\n",
+              " 498.0,\n",
+              " 0,\n",
+              " 163.0,\n",
+              " 195.0,\n",
+              " 0,\n",
+              " 563.0,\n",
+              " 21.0,\n",
+              " 0,\n",
+              " 0,\n",
+              " 239.0,\n",
+              " 529.0,\n",
+              " 550.0,\n",
+              " 361.0,\n",
+              " 258.0,\n",
+              " 32.0,\n",
+              " 58.0,\n",
+              " 0,\n",
+              " 370.0,\n",
+              " 75.0,\n",
+              " 0,\n",
+              " 143.0,\n",
+              " 393.0,\n",
+              " 402.0,\n",
+              " 38.0,\n",
+              " 0]"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "l = []\n",
+        "alpaca = tradeapi.REST(ALPACA_API_KEY,ALPACA_API_SECRET,ALPACA_API_BASE_URL, 'v2')\n",
+        "for i in DOW_30_TICKER[:-1]:\n",
+        "    try:\n",
+        "        l.append(float(alpaca.get_position(i).qty))\n",
+        "    except:\n",
+        "        l.append(0)\n",
+        "        pass\n",
+        "l"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "BarV2({   'c': 162,\n",
+              "    'h': 162.085,\n",
+              "    'l': 162,\n",
+              "    'n': 2,\n",
+              "    'o': 162.085,\n",
+              "    't': '2023-03-28T13:37:00Z',\n",
+              "    'v': 200,\n",
+              "    'vw': 162.0425})"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "alpaca.get_latest_bar('AXP')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+              "       0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "np.zeros(len(DOW_30_TICKER)) "
+      ]
     }
   ],
   "metadata": {
